--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -7,8 +7,8 @@
     fxLayoutGap.xs="0">
 
   <div fxFlex="40">
-    <div fxFlex *ngIf="dish">
-      <mat-card>
+
+      <mat-card fxFlex *ngIf="dish">
   
         <mat-card-header>
           <mat-card-title>
@@ -28,7 +28,7 @@
         </mat-card-actions>
   
       </mat-card>
-    </div>
+   
   </div>
 
   <div fxFlex="40" >
